# ai-auto-video

./: .gitignore  .pre-commit-config.yaml  DEPLOY.md  README.md  cli.py  config.example.json  generate_video_headless.py  index.html  pyproject.toml  requirements.txt  start.bat  video_server.py
locales/: backend-en.json  backend-zh-TW.json  en.json  zh-TW.json
