[project]
name = "ai-auto-video"
version = "0.1.0"
description = "AI Story Video Generator using NVIDIA NIM"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "moviepy>=2.0.0",
    "numpy>=1.24.0",
]
